--- a/index.html
+++ b/index.html
@@ -15,23 +15,26 @@
           src="avatar.png"
           alt="Zdjęcie Imię i nazwisko"
         />
-        <header class="person__info">
-          <h1 class="person__name">Imię i nazwisko</h1>
-          <p class="person__position">stanowisko</p>
-        </header>
-        <p class="person__description person__description--width-margin">
-          Programista z
-          <strong class="special"> kilkunastoletnim doświadczeniem</strong>,
-          fotograf, operator drona, właściciel Sokoła Millennium (na razie tylko
-          z Lego), <strong class="special">prelegent i szkoleniowiec</strong>.
-          Uwielbia eksperymentować z nowymi technologiami, w swojej twórczości
-          ocierając się o sztukę.
-        </p>
-        <p class="person__description">
-          W sieci: <a class="person__link" href="#">Facebook</a>,
-          <a class="person__link" href="#">GitHub</a>,
-          <a class="person__link" href="#">Instagram</a>.
-        </p>
+        <div>
+          <header class="person__info">
+            <h1 class="person__name">Imię i nazwisko</h1>
+            <p class="person__position">stanowisko</p>
+          </header>
+          <p class="person__description person__description--width-margin">
+            Programista z
+            <strong class="special"> kilkunastoletnim doświadczeniem</strong>,
+            fotograf, operator drona, właściciel Sokoła Millennium (na razie
+            tylko z Lego),
+            <strong class="special">prelegent i szkoleniowiec</strong>. Uwielbia
+            eksperymentować z nowymi technologiami, w swojej twórczości
+            ocierając się o sztukę.
+          </p>
+          <p class="person__description">
+            W sieci: <a class="person__link" href="#">Facebook</a>,
+            <a class="person__link" href="#">GitHub</a>,
+            <a class="person__link" href="#">Instagram</a>.
+          </p>
+        </div>
       </article>
     </main>
   </body>
